# Rest-API-Library

./: .gitignore  CMakeLists.txt  PROGRESS_REPORT.md  README.md
Rest-API/: .gitignore  CMakeLists.txt  LOAD_TEST_CLIENT_SUMMARY.md  PRODUCTION_README.md  README.md  USAGE.txt  app.db.backup.20251113_235811  app.db.backup.20251113_235825  config.json  demo.sh  deploy.sh  load_test_client  seed_data.sql
Rest-API/clients/: LOAD_TEST_CLIENT_EXAMPLES.md  SHOP_CLIENT_README.md  admin_client.cpp  ipc_demo_client.cpp  load_test_client.cpp  shop_client.cpp  simple_client.cpp
Rest-API/docs/: IPC_ARCHITECTURE.md  PHASE_3_TO_10.md
Rest-API/include/auth/: authcontroller.hpp  jwt.hpp
Rest-API/include/config/: config.hpp
Rest-API/include/controllers/: productcontroller.hpp
Rest-API/include/core/: healthcheck.hpp  server.hpp  threadpool.hpp
Rest-API/include/data/: idatabase.hpp  orderrepository.hpp  productrepository.hpp  sqlitedatabase.hpp
Rest-API/include/http/: request.hpp  response.hpp  router.hpp
Rest-API/include/ipc/: sharedmemory.hpp
Rest-API/include/middleware/: authmiddleware.hpp  cors.hpp  ratelimiter.hpp
Rest-API/include/models/: order.hpp
Rest-API/include/monitoring/: metrics.hpp
Rest-API/include/services/: orderservice.hpp  userservice.hpp
Rest-API/include/sync/: semaphore.hpp
Rest-API/include/utils/: json.hpp  logger.hpp  queryparams.hpp
Rest-API/scripts/: init_database.sh
Rest-API/servers/: ipc_demo_server.cpp
Rest-API/src/: main.cpp
Rest-API/src/auth/: authcontroller.cpp.disabled  jwt.cpp.disabled
Rest-API/src/config/: config.cpp.disabled
Rest-API/src/core/: healthcheck.cpp  requeststack.cpp  server.cpp  worker.cpp
Rest-API/src/data/: productrepository.cpp  sqlitedatabase.cpp  userrepository.cpp
Rest-API/src/http/: response.cpp
Rest-API/src/ipc/: sharedmemory.cpp
Rest-API/src/middleware/: authmiddleware.cpp.disabled  cors.cpp.disabled  ratelimiter.cpp.disabled
Rest-API/src/monitoring/: metrics.cpp.disabled
Rest-API/src/sync/: semaphore.cpp
Rest-API/src/utils/: json.cpp  queryparams.cpp
Rest-API/tests/: test_api.sh  test_complete_api.sh
demo/: README.md  client_tester.py  presentation_demo.sh  run_all_servers.sh
docs/thesis/: CAPITOLUL_1_INTRODUCERE.md  CAPITOLUL_2_RELATED_WORK.md  README.md
examples/example1_simple/: main.cpp
examples/example2_ecommerce/: README.md  main.cpp  schema.sql
examples/example2_ecommerce/include/controllers/: ordercontroller.hpp  usercontroller.cpp  usercontroller.hpp
examples/example2_ecommerce/include/data/: userrepository.hpp
examples/example2_ecommerce/include/models/: product.hpp  user.hpp
examples/example2_ecommerce/include/services/: productservice.hpp
examples/example2_ecommerce/src/controllers/: ordercontroller.cpp  productcontroller.cpp
examples/example2_ecommerce/src/data/: orderrepository.cpp
examples/example2_ecommerce/src/services/: orderservice.cpp  productservice.cpp  userservice.cpp
examples/example3_iot/: main.cpp
examples/example4_banking/: main.cpp
examples/example5_medical/: main.cpp
framework/: README.md
framework/include/: restapi.hpp
framework/src/: restapi.cpp
infrastructure/include/core/: master.hpp  requeststack.hpp  server.hpp  worker.hpp  workerprocess.hpp
infrastructure/include/data/: connectionpool.hpp  databaseconnection.hpp
infrastructure/include/ipc/: priorityqueue.hpp  sharedqueue.hpp
infrastructure/include/utils/: sanitizer.hpp
infrastructure/src/core/: master.cpp  server.cpp  threadpool.cpp  workerprocess.cpp
infrastructure/src/data/: connectionpool.cpp
infrastructure/src/http/: request.cpp  router.cpp
infrastructure/src/utils/: logger.cpp  sanitizer.cpp
tests/: CMakeLists.txt
tests/performance/: benchmark_throughput.cpp
tests/unit/: test_router.cpp  test_sharedqueue.cpp
